fix: body x overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -139,3 +139,8 @@
     @apply font-sans;
   }
 }
+
+html,
+body {
+  overflow-x: hidden;
+}
